RESOLVED FIXED176194
Reject promises in case of internal CacheStorage engine errors.
https://bugs.webkit.org/show_bug.cgi?id=176194
Summary Reject promises in case of internal CacheStorage engine errors.
youenn fablet
Reported 2017-08-31 16:25:59 PDT
Currently we use debug ASSERT and we silently fail. It might be better to reject promises.
Attachments
Patch (16.94 KB, patch)
2017-08-31 16:42 PDT, youenn fablet
no flags
Rebasing for landing (16.99 KB, patch)
2017-09-01 10:46 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-08-31 16:42:10 PDT
youenn fablet
Comment 2 2017-09-01 09:48:00 PDT
A follow-up patch might want to change a little bit the error handling in the engine. In particular, when we experience a write disk error, the modification in the in-memory representation is already done. In that case, we could: - Wait for write disk completion to make the in-memory change. That seems risky. - Log in the inspector console any WriteDisk error, but not reject promises for that type of error.
youenn fablet
Comment 3 2017-09-01 10:46:57 PDT
Created attachment 319614 [details] Rebasing for landing
WebKit Commit Bot
Comment 4 2017-09-01 11:16:19 PDT
Comment on attachment 319614 [details] Rebasing for landing Clearing flags on attachment: 319614 Committed r221483: <http://trac.webkit.org/changeset/221483>
WebKit Commit Bot
Comment 5 2017-09-01 11:16:21 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:45:57 PDT
Note You need to log in before you can comment on or make changes to this bug.